finish: refactoring and UI fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -177,6 +177,12 @@
     --ring: 215 25% 27%;
 
     --radius: 0.75rem;
+
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
   }
 
   .dark {
@@ -207,6 +213,12 @@
     --border: 215 25% 20%;
     --input: 215 25% 20%;
     --ring: 210 20% 98%;
+
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
   }
 }
 
